...
        $0.setTitle("Войти", for: .normal)
        $0.setTitleColor(.ypBlack, for: .normal)
        $0.titleLabel?.font = UIFont.systemFont(ofSize: 17, weight: .bold)
        $0.backgroundColor = .white
        $0.layer.masksToBounds = true
        $0.layer.cornerRadius = 16
        $0.accessibilityIdentifier = "Authenticate" 
        $0.addTarget(self, action: #selector(didTapLoginButton), for: .touchUpInside)
        return $0
    }(UIButton())
    
    // MARK: - Internal Properties
    
...
