...
final class WebViewViewController: UIViewController, WebViewViewControllerProtocol {
    
    // MARK: - Views
    
    private lazy var webView: WKWebView = {
        $0.navigationDelegate = self
        $0.accessibilityIdentifier = "UnsplashWebView"
        return $0
    }(WKWebView())
    
    private lazy var backButton: UIButton = {
        $0.setImage(UIImage(named: "backward_black"), for: .normal)
        $0.addTarget(self, action: #selector(didTapBackButton), for: .touchUpInside)
...
